--- a/css/about.css
+++ b/css/about.css
@@ -120,6 +120,7 @@
 /* Hide hamburger on desktop */
 .menu-toggle {
   display: none;
+   margin-right: 20px; 
 }
 
 /* MOBILE VIEW */
@@ -131,6 +132,7 @@
     font-size: 34px;
     cursor: pointer;
     color: #08254c;
+     margin-right: 15px; 
   }
 
   /* Keep header height stable */
