--- a/css/general.css
+++ b/css/general.css
@@ -113,6 +113,7 @@
 /* Hide hamburger on desktop */
 .menu-toggle {
   display: none;
+   margin-right: 20px; 
 }
 
 /* MOBILE VIEW */
@@ -124,6 +125,7 @@
     font-size: 34px;
     cursor: pointer;
     color: #08254c;
+     margin-right: 15px; 
   }
 
   /* Keep header height stable */
