--- a/css/about.css
+++ b/css/about.css
@@ -14,7 +14,7 @@
     }
 
     body{
-      background:#f5f9fb;
+      background:white;
       color:#333;
     }
 
@@ -408,8 +408,10 @@
 
 .footer-copy {
   text-align: center;
-  margin-top: 15px;
+  margin-top: 20px;   /* small space */
+  margin-bottom: 0; /* no extra space */
   font-size: 14px;
+  line-height: 1.3;
 }
 .logopara{
   margin-bottom: 50px;
@@ -455,12 +457,13 @@
     justify-content: center;
   }
 
-  .footer-copy {
+   .footer-copy {
     font-size: 13px;
-    padding: 0 10px;
+    padding: 2px 10px;
+    margin: 0;
+    line-height: 1.3;
   }
 }
-
 
 
 
