--- a/css/contact.css
+++ b/css/contact.css
@@ -12,7 +12,7 @@
     }
 
     body{
-      background:#f5f9fb;
+      background:white;
       color:#333;
     }
 
@@ -528,12 +528,14 @@
   margin-top: 30px;
   border-color: rgba(255,255,255,0.3);
 }
-
 .footer-copy {
   text-align: center;
-  margin-top: 15px;
+  margin-top: 20px;   /* small space */
+  margin-bottom: 0; /* no extra space */
   font-size: 14px;
+  line-height: 1.3;
 }
+
 .logopara{
   margin-bottom: 50px;
 }
@@ -580,7 +582,9 @@
 
   .footer-copy {
     font-size: 13px;
-    padding: 0 10px;
+    padding: 2px 10px;
+    margin: 0;
+    line-height: 1.3;
   }
 }
 
