--- a/css/general.css
+++ b/css/general.css
@@ -725,8 +725,10 @@
 
 .footer-copy {
   text-align: center;
-  margin-top: 15px;
+  margin-top: 20px;   /* small space */
+  margin-bottom: 0; /* no extra space */
   font-size: 14px;
+  line-height: 1.3;
 }
 
 
@@ -770,7 +772,9 @@
 
   .footer-copy {
     font-size: 13px;
-    padding: 0 10px;
+    padding: 2px 10px;
+    margin: 0;
+    line-height: 1.3;
   }
 }
 
