--- a/css/gyn.css
+++ b/css/gyn.css
@@ -554,10 +554,11 @@
 
 .footer-copy {
   text-align: center;
-  margin-top: 15px;
+  margin-top: 20px;   /* small space */
+  margin-bottom: 0; /* no extra space */
   font-size: 14px;
+  line-height: 1.3;
 }
-
 
 @media (max-width: 600px) {
   .footer-logo {
@@ -598,9 +599,11 @@
     justify-content: center;
   }
 
-  .footer-copy {
+   .footer-copy {
     font-size: 13px;
-    padding: 0 10px;
+    padding: 2px 10px;
+    margin: 0;
+    line-height: 1.3;
   }
 }
 
