--- a/css/home.css
+++ b/css/home.css
@@ -8,7 +8,7 @@
     body{
       margin:0;
       font-family:Arial, Helvetica, sans-serif;
-      background:#9CA7B7
+      background:white
  ;
     }
 
@@ -1071,8 +1071,10 @@
 
 .footer-copy {
   text-align: center;
-  margin-top: 15px;
+  margin-top: 20px;   /* small space */
+  margin-bottom: 0; /* no extra space */
   font-size: 14px;
+  line-height: 1.3;
 }
 
 /* Responsive */
@@ -1113,9 +1115,11 @@
     justify-content: center;
   }
 
-  .footer-copy {
+ .footer-copy {
     font-size: 13px;
-    padding: 0 10px;
+    padding: 2px 10px;
+    margin: 0;
+    line-height: 1.3;
   }
 }
 
