--- a/css/paediatrics.css
+++ b/css/paediatrics.css
@@ -625,8 +625,10 @@
 
 .footer-copy {
   text-align: center;
-  margin-top: 15px;
+  margin-top: 20px;   /* small space */
+  margin-bottom: 0; /* no extra space */
   font-size: 14px;
+  line-height: 1.3;
 }
 
 
@@ -669,11 +671,15 @@
     justify-content: center;
   }
 
+ 
   .footer-copy {
     font-size: 13px;
-    padding: 0 10px;
+    padding: 2px 10px;
+    margin: 0;
+    line-height: 1.3;
   }
 }
+
 
 
 
